--- a/roster.html
+++ b/roster.html
@@ -37,11 +37,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (2)</b></font></td></tr>
 <tr><td>PHI</td><td>Carson Wentz           </td></tr>
 <tr><td> NE</td><td>Tom Brady              </td></tr>
+<tr><td>PIT</td><td>Mason Rudolph          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
-<tr><td>DEN</td><td>Royce Freeman          </td></tr>
 <tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
@@ -93,7 +93,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>CAR</td><td>Cam Newton             </td></tr>
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td>DET</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -101,6 +100,7 @@
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 <tr><td>ARI</td><td>Kenyan Drake           </td></tr>
+<tr><td>CAR</td><td>Reggie Bonnafon        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
