--- a/pickups.html
+++ b/pickups.html
@@ -23,8 +23,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Mason Rudolph/Royce Freeman</td>
+<td width=50>11/5</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -340,6 +340,7 @@ Team 8  - Josh Lambo/Stephen Gostkowski (10/8)<br>
 Team 3  - Brandon McManus/Kerryon Johnson (10/23)<br>
 Team 1  - Mohamed Sanu/Josh Gordon (10/23)<br>
 Team 5  - DeVante Parker/Will Dissly (10/24)<br>
-Team 1  - Josh Gordon/Mike Nugent (11/1)
+Team 1  - Josh Gordon/Mike Nugent (11/1)<br>
+Team 4  - Reggie Bonnafon/Cam Newton (11/5)
 </td></tr>
 </table>
