--- a/week10.html
+++ b/week10.html
@@ -140,12 +140,12 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
 <tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
+<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ebron</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
