--- a/week10.html
+++ b/week10.html
@@ -56,7 +56,7 @@
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -82,12 +82,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -95,7 +95,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
@@ -109,14 +109,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McCoy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Watkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
