--- a/roster.html
+++ b/roster.html
@@ -285,9 +285,9 @@
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
-<tr><td>CIN</td><td>Damion Willis          </td></tr>
 <tr><td>DEN</td><td>Drew Lock              </td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
+<tr><td> NE</td><td>N'Keal Harry           </td></tr>
 </table>
 </td>
 <td>
