--- a/pickups.html
+++ b/pickups.html
@@ -341,6 +341,7 @@ Team 3  - Brandon McManus/Kerryon Johnson (10/23)<br>
 Team 1  - Mohamed Sanu/Josh Gordon (10/23)<br>
 Team 5  - DeVante Parker/Will Dissly (10/24)<br>
 Team 1  - Josh Gordon/Mike Nugent (11/1)<br>
-Team 4  - Reggie Bonnafon/Cam Newton (11/5)
+Team 4  - Reggie Bonnafon/Cam Newton (11/5)<br>
+Team 10 - N'Keal Harry/Damion Willis (11/10)
 </td></tr>
 </table>
