--- a/roster.html
+++ b/roster.html
@@ -78,6 +78,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
 <tr><td>HOU</td><td>Darren Fells           </td></tr>
+<tr><td> SF</td><td>Ross Dwelley           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -85,7 +86,6 @@
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td>DET</td><td>Ty Johnson             </td></tr>
 <tr><td>CIN</td><td>Ryan Finley            </td></tr>
-<tr><td>ATL</td><td>Qadree Ollison         </td></tr>
 </table>
 </td>
 </tr>
