--- a/week10.html
+++ b/week10.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mack</td>          <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>260</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Mack</td>          <td></td><td align=right>35</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>60</td></tr>
 <tr><td>ESanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Hooper</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Hauschka</td>      <td></td><td align=right>10</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>465</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>80</td></tr>
 <tr><td>Samuels</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Slayton</td>       <td></td><td align=right>210</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Rosas</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Rosas</td>         <td></td><td align=right>5</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>470</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Rudolph</td>       <td></td><td align=right>60</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Gurley</td>        <td></td><td align=right>35</td></tr>
+<tr><td>MThomas</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>150</td></tr>
+<tr><td>Graham</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>160</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>65</td></tr>
+<tr><td></td>              <td></td><td align=right>570</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
-<tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Winston</td>       <td></td><td align=right>110</td></tr>
+<tr><td>Bell</td>          <td></td><td align=right>50</td></tr>
+<tr><td>Ingram</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>55</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Seibert</td>       <td></td><td align=right>70</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>305</td></tr>
+<tr><td></td>              <td></td><td align=right>690</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>410</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>35</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>75</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Dwelley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>280</td></tr>
+<tr><td></td>              <td></td><td align=right>835</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>270</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>55</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>55</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>35</td></tr>
+<tr><td>JBrown</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Rudolph</td>       <td></td><td align=right>105</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>35</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>590</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cousins</td>       <td></td><td align=right>85</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>100</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>135</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>30</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>85</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>85</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>655</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>190</td></tr>
 <tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>340</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>35</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>145</td></tr>
+<tr><td>Olsen</td>         <td></td><td align=right>45</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>840</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>35</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Landry</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MGordon</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Parker</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Landry</td>        <td></td><td align=right>120</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>-</td>             <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>315</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>30</td></tr>
+<tr><td>RJones</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>90</td></tr>
+<tr><td>ARobinson</td>     <td></td><td align=right>40</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>150</td></tr>
+<tr><td>Howard</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Gonzalez</td>      <td></td><td align=right>105</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>660</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,42 +167,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6420</font></td>
-    <td><font size=2>6470</font></td>
+    <td><font size=2>6890</font></td>
+    <td><font size=2>6935</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>5380</font></td>
-    <td><font size=2>6375</font></td>
-    <td><font size=2>900</font></td>
-    <td><font size=2>310</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>6000</font></td>
-    <td><font size=2>5790</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6835</font></td>
+    <td><font size=2>6380</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>Rich(9)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5970</font></td>
+    <td><font size=2>7210</font></td>
+    <td><font size=2>900</font></td>
+    <td><font size=2>310</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6025</font></td>
-    <td><font size=2>6200</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6340</font></td>
+    <td><font size=2>6860</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5220</font></td>
-    <td><font size=2>5875</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5685</font></td>
+    <td><font size=2>6345</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
@@ -214,43 +214,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5375</font></td>
+    <td><font size=2>4990</font></td>
+    <td><font size=2>870</font></td>
+    <td><font size=2>340</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>7900</font></td>
-    <td><font size=2>5595</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>8555</font></td>
+    <td><font size=2>6435</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5860</font></td>
-    <td><font size=2>5295</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>6430</font></td>
+    <td><font size=2>5985</font></td>
     <td><font size=2>855</font></td>
     <td><font size=2>450</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4715</font></td>
-    <td><font size=2>4675</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>340</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>4</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5495</font></td>
-    <td><font size=2>5985</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6335</font></td>
+    <td><font size=2>6640</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>280</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5740</font></td>
-    <td><font size=2>6495</font></td>
+    <td><font size=2>6430</font></td>
+    <td><font size=2>7065</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>1</font></td></tr>
