--- a/pickups.html
+++ b/pickups.html
@@ -175,8 +175,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Deebo Samuel/Demarcus Robinson</td>
+<td width=50>11/13</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -342,6 +342,7 @@ Team 1  - Mohamed Sanu/Josh Gordon (10/23)<br>
 Team 5  - DeVante Parker/Will Dissly (10/24)<br>
 Team 1  - Josh Gordon/Mike Nugent (11/1)<br>
 Team 4  - Reggie Bonnafon/Cam Newton (11/5)<br>
-Team 10 - N'Keal Harry/Damion Willis (11/10)
+Team 10 - N'Keal Harry/Damion Willis (11/10)<br>
+Team 8  - Brian Hill/Ito Smith (11/12)
 </td></tr>
 </table>
