--- a/roster.html
+++ b/roster.html
@@ -160,7 +160,6 @@
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>CAR</td><td>Curtis Samuel          </td></tr>
-<tr><td> KC</td><td>Demarcus Robinson      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td>TEN</td><td>Delanie Walker         </td></tr>
@@ -172,6 +171,7 @@
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
+<tr><td> SF</td><td>Deebo Samuel           </td></tr>
 </table>
 </td>
 </tr>
@@ -215,7 +215,7 @@
 <tr><td>BAL</td><td>Mark Ingram            </td></tr>
 <tr><td>SEA</td><td>Rashaad Penny          </td></tr>
 <tr><td> SF</td><td>Matt Breida            </td></tr>
-<tr><td>ATL</td><td>Ito Smith              </td></tr>
+<tr><td>ATL</td><td>Brian Hill             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
