--- a/roster.html
+++ b/roster.html
@@ -37,7 +37,6 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Matthew (2)</b></font></td></tr>
 <tr><td>PHI</td><td>Carson Wentz           </td></tr>
 <tr><td> NE</td><td>Tom Brady              </td></tr>
-<tr><td>PIT</td><td>Mason Rudolph          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
@@ -58,6 +57,7 @@
 <tr><td>CAR</td><td>Joey Slye              </td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>CAR</td><td>Will Grier             </td></tr>
+<tr><td>DEN</td><td>Noah Fant              </td></tr>
 </table>
 </td>
 <td valign=top>
