--- a/week11.html
+++ b/week11.html
@@ -22,11 +22,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Gallup</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dwelley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -50,10 +50,10 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Carr</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Landry</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
@@ -128,11 +128,11 @@
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>RAnderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
