--- a/pickups.html
+++ b/pickups.html
@@ -274,8 +274,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Traded to Grant</td>
+<td width=50>11/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -343,6 +343,12 @@ Team 5  - DeVante Parker/Will Dissly (10/24)<br>
 Team 1  - Josh Gordon/Mike Nugent (11/1)<br>
 Team 4  - Reggie Bonnafon/Cam Newton (11/5)<br>
 Team 10 - N'Keal Harry/Damion Willis (11/10)<br>
-Team 8  - Brian Hill/Ito Smith (11/12)
+Team 8  - Brian Hill/Ito Smith (11/12)<br>
+Team 4  - Nick Foles/Preston Williams (11/15)
+</td></tr>
+<tr><td width=50>11/16</td>
+<td width=600>
+Team 5  - Matt Ryan, Terry McLaurin, pickup ()<br>
+Team 9  - Tevin Coleman, DeVante Parker
 </td></tr>
 </table>
