--- a/roster.html
+++ b/roster.html
@@ -95,6 +95,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (4)</b></font></td></tr>
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
 <tr><td>DET</td><td>Matthew Stafford       </td></tr>
+<tr><td>JAX</td><td>Nick Foles             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
@@ -115,7 +116,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Matt Gay               </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
-<tr><td>MIA</td><td>Preston Williams       </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -124,10 +124,10 @@
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
 <tr><td>CIN</td><td>Andy Dalton            </td></tr>
 <tr><td>OAK</td><td>Derek Carr             </td></tr>
+<tr><td>ATL</td><td>Matt Ryan              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
-<tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
 <tr><td>HOU</td><td>Carlos Hyde            </td></tr>
 <tr><td> KC</td><td>Darrel Williams        </td></tr>
@@ -136,7 +136,6 @@
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td>JAX</td><td>DJ Chark               </td></tr>
-<tr><td>MIA</td><td>DeVante Parker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>OAK</td><td>Darren Waller          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -144,6 +143,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td>JAX</td><td>Gardner Minshew        </td></tr>
+<tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -235,18 +235,19 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>ATL</td><td>Matt Ryan              </td></tr>
 <tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td>TEN</td><td>Ryan Tannehill         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td>PHI</td><td>Jordan Howard          </td></tr>
+<tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Brandin Cooks          </td></tr>
 <tr><td>LAC</td><td>Mike Williams          </td></tr>
 <tr><td> TB</td><td>Chris Godwin           </td></tr>
 <tr><td>BUF</td><td>John Brown             </td></tr>
+<tr><td>MIA</td><td>DeVante Parker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Jared Cook             </td></tr>
 <tr><td>MIN</td><td>Kyle Rudolph           </td></tr>
@@ -257,7 +258,6 @@
 <tr><td>BUF</td><td>Devin Singletary       </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td> KC</td><td>Mecole Hardman         </td></tr>
-<tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 </table>
 </td>
 </tr>
