--- a/pickups.html
+++ b/pickups.html
@@ -344,7 +344,8 @@ Team 1  - Josh Gordon/Mike Nugent (11/1)<br>
 Team 4  - Reggie Bonnafon/Cam Newton (11/5)<br>
 Team 10 - N'Keal Harry/Damion Willis (11/10)<br>
 Team 8  - Brian Hill/Ito Smith (11/12)<br>
-Team 4  - Nick Foles/Preston Williams (11/15)
+Team 4  - Nick Foles/Preston Williams (11/15)<br>
+Team 10 - Brett Maher/Drew Lock (11/17)
 </td></tr>
 <tr><td width=50>11/16</td>
 <td width=600>
