--- a/roster.html
+++ b/roster.html
@@ -283,9 +283,9 @@
 <tr><td>CAR</td><td>Greg Olsen             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
+<tr><td>DAL</td><td>Brett Maher            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
-<tr><td>DEN</td><td>Drew Lock              </td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
 <tr><td> NE</td><td>N'Keal Harry           </td></tr>
 </table>
