--- a/pickups.html
+++ b/pickups.html
@@ -47,8 +47,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Drew Lock/Marquez Valdes-Scantling</td>
+<td width=50>11/19</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -106,8 +106,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Derrius Guice/Ross Dwelley</td>
+<td width=50>11/19</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -246,8 +246,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jonathan Williams/Aldrick Rosas</td>
+<td width=50>11/19</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
