--- a/roster.html
+++ b/roster.html
@@ -47,7 +47,6 @@
 <tr><td>IND</td><td>TY Hilton              </td></tr>
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
-<tr><td> GB</td><td>Marquez ValdesScantling</td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Jimmy Graham           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -58,6 +57,7 @@
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>CAR</td><td>Will Grier             </td></tr>
 <tr><td>DEN</td><td>Noah Fant              </td></tr>
+<tr><td>DEN</td><td>Drew Lock              </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -68,6 +68,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Damien Williams        </td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
+<tr><td>WAS</td><td>Derrius Guice          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Stefon Diggs           </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
@@ -78,7 +79,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
 <tr><td>HOU</td><td>Darren Fells           </td></tr>
-<tr><td> SF</td><td>Ross Dwelley           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -186,6 +186,7 @@
 <tr><td> NE</td><td>James White            </td></tr>
 <tr><td>PIT</td><td>Jaylen Samuels         </td></tr>
 <tr><td>NYG</td><td>Wayne Gallman          </td></tr>
+<tr><td>IND</td><td>Jonathan Williams      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
@@ -194,7 +195,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Aldrick Rosas          </td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>OAK</td><td>Josh Jacobs            </td></tr>
