--- a/roster.html
+++ b/roster.html
@@ -224,12 +224,12 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>LAC</td><td>Hunter Henry           </td></tr>
+<tr><td>NYJ</td><td>Ryan Griffin           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Josh Lambo             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Austin Seibert         </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
-<tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 </table>
 </td>
 <td valign=top>
