--- a/freeagt.html
+++ b/freeagt.html
@@ -1,35 +1,35 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2019 Free Agent Leaderboard<br>(Through week 11)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2019 Free Agent Leaderboard<br>(Through week 12)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 905</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 905</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 710</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 695</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Case Keenum            </td><td><font size=3> 680</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Mitch Trubisky         </td><td><font size=3> 585</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Sam Darnold            </td><td><font size=3>1055</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 920</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 905</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 895</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Mitch Trubisky         </td><td><font size=3> 750</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Case Keenum            </td><td><font size=3> 680</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 565</td></tr>
 <tr><td><font size=3>8)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 555</td></tr>
 <tr><td><font size=3>9)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Matt Moore             </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jeff Driskel           </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Brandon Allen          </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Brian Hoyer            </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Matt Schaub            </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Jeff Driskel           </td><td><font size=3> 470</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Matt Moore             </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Matt Schaub            </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Brandon Allen          </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Brian Hoyer            </td><td><font size=3> 175</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
+<tr><td><font size=3>Raheem Mostert         </td><td><font size=3> 540</td></tr>
 <tr><td><font size=3>Jamaal Williams        </td><td><font size=3> 455</td></tr>
-<tr><td><font size=3>Raheem Mostert         </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Gus Edwards            </td><td><font size=3> 405</td></tr>
+<tr><td><font size=3>Gus Edwards            </td><td><font size=3> 430</td></tr>
 <tr><td><font size=3>Duke Johnson           </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>Frank Gore             </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>Jeff Wilson            </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Frank Gore             </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Kerryon Johnson        </td><td><font size=3> 260</td></tr>
 <tr><td><font size=3>Adrian Peterson        </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Tarik Cohen            </td><td><font size=3> 225</td></tr>
@@ -37,83 +37,83 @@
 <tr><td><font size=3>Kenjon Barner          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Kalen Ballage          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Derrius Guice          </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Nyheim Hines           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Bo Scarbrough          </td><td><font size=3> 120</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Golden Tate            </td><td><font size=3> 500</td></tr>
+<tr><td><font size=3>Golden Tate            </td><td><font size=3> 600</td></tr>
 <tr><td><font size=3>Jamison Crowder        </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>Randall Cobb           </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>Randall Cobb           </td><td><font size=3> 475</td></tr>
+<tr><td><font size=3>Willie Snead           </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>Cole Beasley           </td><td><font size=3> 425</td></tr>
 <tr><td><font size=3>Chris Conley           </td><td><font size=3> 425</td></tr>
 <tr><td><font size=3>Zach Pascal            </td><td><font size=3> 420</td></tr>
 <tr><td><font size=3>Taylor Gabriel         </td><td><font size=3> 415</td></tr>
 <tr><td><font size=3>Demarcus Robinson      </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Marquez ValdesScantling</td><td><font size=3> 385</td></tr>
 <tr><td><font size=3>John Ross              </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>James Washington       </td><td><font size=3> 345</td></tr>
 <tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Cole Beasley           </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>Jakeem Grant           </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Willie Snead           </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Danny Amendola         </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>Corey Davis            </td><td><font size=3> 260</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>Will Dissly            </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Ryan Griffin           </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 245</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jacob Hollister        </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Vance McDonald         </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jason Witten           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>James O'Shaughnessy    </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Tyler Eifert           </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Jacob Hollister        </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Vance McDonald         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Jason Witten           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>James O'Shaughnessy    </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Tyler Eifert           </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 150</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 800</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 695</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 690</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 890</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 780</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 740</td></tr>
 <tr><td><font size=3>Dan Bailey             </td><td><font size=3> 645</td></tr>
-<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 600</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 445</td></tr>
+<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 555</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 530</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 490</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 440</td></tr>
 <tr><td><font size=3>Matt Bryant            </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 425</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>Sam Ficken             </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>Sam Ficken             </td><td><font size=3> 435</td></tr>
 <tr><td><font size=3>Ty Long                </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>Mike Badgley           </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>Younghoe Koo           </td><td><font size=3> 325</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Steven Sims            </td><td><font size=3> 430</td></tr>
 <tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 295</td></tr>
 <tr><td><font size=3>Foster Moreau          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>Steven Sims            </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Deonte Harris          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Andy Isabella          </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Irv Smith              </td><td><font size=3> 135</td></tr>
 <tr><td><font size=3>Parris Campbell        </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Bisi Johnson           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Qadree Ollison         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>KeeSean Johnson        </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Benny Snell            </td><td><font size=3>  80</td></tr>
 <tr><td><font size=3>Stephen Carlson        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Alec Ingold            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Qadree Ollison         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Scott Miller           </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Benny Snell            </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Keelan Doss            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Kaden Smith            </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr></table>
