--- a/roster.html
+++ b/roster.html
@@ -162,8 +162,8 @@
 <tr><td>CAR</td><td>Curtis Samuel          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
-<tr><td>TEN</td><td>Delanie Walker         </td></tr>
 <tr><td>IND</td><td>Eric Ebron             </td></tr>
+<tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
 <tr><td>ARI</td><td>Zane Gonzalez          </td></tr>
