--- a/week13.html
+++ b/week13.html
@@ -41,8 +41,8 @@
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Haskins</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -50,13 +50,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ebron</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
