--- a/roster.html
+++ b/roster.html
@@ -19,7 +19,6 @@
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td> SF</td><td>Emmanuel Sanders       </td></tr>
-<tr><td>BUF</td><td>Duke Williams          </td></tr>
 <tr><td> NE</td><td>Mohamed Sanu           </td></tr>
 <tr><td>SEA</td><td>Josh Gordon            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -30,6 +29,7 @@
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td>BAL</td><td>Miles Boykin           </td></tr>
 <tr><td> NE</td><td>Jakobi Meyers          </td></tr>
+<tr><td>PIT</td><td>Benny Snell            </td></tr>
 </table>
 </td>
 <td valign=top>
