--- a/pickups.html
+++ b/pickups.html
@@ -54,8 +54,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Benny Snell\Duke Williams</td>
+<td width=50>11/28</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
