--- a/week13.html
+++ b/week13.html
@@ -22,11 +22,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Griffin</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -84,10 +84,10 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Watkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Harry</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -125,9 +125,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hyde</td>          <td></td><td align=right>0</td></tr>
+<tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
